logs/cozy-management.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/certifi'...
Listing './lib/python3.5/site-packages/certifi-2017.11.5.dist-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/cozy_management'...
Compiling './lib/python3.5/site-packages/cozy_management/backup.py'...
***   File "./lib/python3.5/site-packages/cozy_management/backup.py", line 32
    print 'Need to create {}'.format(BACKUPS_PATH)
                            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/cozy_management/cli.py'...
***   File "./lib/python3.5/site-packages/cozy_management/cli.py", line 77
    print 'OK'
             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/cozy_management/compare_version.py'...
***   File "./lib/python3.5/site-packages/cozy_management/compare_version.py", line 31
    print 'Unknown operator {}'.format(operator)
                              ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/cozy_management/couchdb.py'...
***   File "./lib/python3.5/site-packages/cozy_management/couchdb.py", line 47
    helpers.file_rights(LOGIN_FILENAME, mode=0400, uid=cozy_ds_uid, gid=0)
                                                ^
SyntaxError: invalid token

Compiling './lib/python3.5/site-packages/cozy_management/diag.py'...
***   File "./lib/python3.5/site-packages/cozy_management/diag.py", line 78
    print '===== {}'.format(text)
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/cozy_management/helpers.py'...
***   File "./lib/python3.5/site-packages/cozy_management/helpers.py", line 62
    print ok_message
                   ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/cozy_management/migration.py'...
***   File "./lib/python3.5/site-packages/cozy_management/migration.py", line 39
    print 'Execute:'
                   ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/cozy_management/process.py'...
***   File "./lib/python3.5/site-packages/cozy_management/process.py", line 28
    print '{}: {}'.format(username, oom_score)
                 ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/cozy_management/ssl.py'...
***   File "./lib/python3.5/site-packages/cozy_management/ssl.py", line 39
    print 'Create {}'.format(certificate_path)
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/cozy_management/weboob.py'...
***   File "./lib/python3.5/site-packages/cozy_management/weboob.py", line 23
    print 'Updating weboob configuration'
                                        ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/docopt-0.6.2.egg-info'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/psutil'...
Listing './lib/python3.5/site-packages/psutil/tests'...
Listing './lib/python3.5/site-packages/psutil-5.4.3.egg-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests-2.18.4.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/urllib3'...
Listing './lib/python3.5/site-packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/urllib3/contrib/_securetransport'...
Listing './lib/python3.5/site-packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/urllib3/packages/backports'...
Listing './lib/python3.5/site-packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/urllib3/util'...
Listing './lib/python3.5/site-packages/urllib3-1.22.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
